# MemFlow

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  config_hw  ~
DRAMSim2/: .nfs00000000022003c10000016c  .nfs00000000022003d50000016d  .nfs00000000022003f200000165  .nfs00000000022003f300000166  .nfs00000000022003f400000167  .nfs00000000022003f500000168  .nfs00000000022003f600000169  .nfs00000000022003f70000016a  .nfs00000000022003f80000016b  .nfs00000000022003fb0000016e  .nfs00000000022003fc0000016f  .nfs00000000022003fd00000170  .nfs00000000022003fe00000171  .nfs00000000022003ff00000172  .nfs000000000220040000000173  .nfs00000000022004110000015e  MemoryController.cpp  MemorySystem.cpp  MultiChannelMemorySystem.cpp  results.txt  system.ini.example
DRAMSim2/example_app/: .nfs0000000007ba05840000015d  dramsim_test  (+2 more)
mn_size/: data_proc.py  mn_vs_mem.txt
py/: data_process.py  py_cost.py  py_cost_time.py
result/: spill1.txt  tile_slack.txt
src/: .result.txt.swp  Application.cpp  Application.hpp  CGScheduling.cpp  CGScheduling.hpp  ComputationGraph.cpp  ComputationGraph.hpp  DRAMAccess.cpp  DRAMAccess.hpp  Data.cpp  Data.hpp  DataBlock.cpp  DataBlock.hpp  Hardware.cpp  Hardware.hpp  MacroNode.cpp  MacroNode.hpp  MacroNodeTemplate.cpp  MacroNodeTemplate.hpp  Makefile  Memory.cpp  Memory.hpp  OptiMacroNode.cpp  OptiMacroNode.hpp  Parameters.hpp  Pattern.cpp  Pattern.hpp  ProcessConfig.cpp  ProcessConfig.hpp  SAOptimization.cpp  SAOptimization.hpp  Scheduling.cpp  Scheduling.hpp  Setting.hpp  Tile.hpp  Util.cpp  Util.hpp  Workload.cpp  Workload.hpp  Workload_LU.cpp  (+12 more)
(+4 files in other folders)
